[gd_scene load_steps=14 format=3 uid="uid://badk3r16foj3o"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_0wla4"]
[ext_resource type="Texture2D" uid="uid://oy2fyqakiwf0" path="res://graphics/player/player_idle_sprite_frames.png" id="2_afrch"]
[ext_resource type="Texture2D" uid="uid://cvbge54aoykpj" path="res://graphics/player/player_sprite_frames_proto.png" id="2_r6q4w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ylcxi"]
atlas = ExtResource("2_afrch")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_okybo"]
atlas = ExtResource("2_afrch")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3m3e"]
atlas = ExtResource("2_afrch")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jym3v"]
atlas = ExtResource("2_afrch")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpfyc"]
atlas = ExtResource("2_r6q4w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cidvc"]
atlas = ExtResource("2_r6q4w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1xer"]
atlas = ExtResource("2_r6q4w")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xj1i"]
atlas = ExtResource("2_r6q4w")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8kv2u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylcxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okybo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3m3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jym3v")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpfyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cidvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1xer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xj1i")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2lal3"]
size = Vector2(14, 14)

[node name="Player" type="CharacterBody2D"]
collision_mask = 15
script = ExtResource("1_0wla4")

[node name="Mage Walk_Run" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_8kv2u")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.607186

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_2lal3")

[node name="DefaultSpellCooldown" type="Timer" parent="."]
wait_time = 0.25

[node name="SecondSpellCooldown" type="Timer" parent="."]
wait_time = 0.291

[connection signal="timeout" from="DefaultSpellCooldown" to="." method="_on_default_spell_cooldown_timeout"]
[connection signal="timeout" from="SecondSpellCooldown" to="." method="_on_second_spell_cooldown_timeout"]
